--- a/slHackathonGame/Pages/GamePage.xaml
+++ b/slHackathonGame/Pages/GamePage.xaml
@@ -1,17 +1,18 @@
-﻿<phone:PhoneApplicationPage 
-    x:Class="slHackathonGame.Pages.GamePage"
+﻿<phone:PhoneApplicationPage
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:pb="clr-namespace:Spritehand.PhysicsBehaviors;assembly=Spritehand.PhysicsBehaviors" 
+    x:Class="slHackathonGame.Pages.GamePage"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
-    mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True">
+    mc:Ignorable="d" d:DesignHeight="800" d:DesignWidth="480"
+    shell:SystemTray.IsVisible="false">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Canvas x:Name="LayoutRoot" Background="CornflowerBlue">
@@ -19,6 +20,35 @@
         <Canvas.Clip>
             <RectangleGeometry Rect="0,0,480,800"/>
         </Canvas.Clip>
+    	<i:Interaction.Behaviors>
+    		<pb:PhysicsControllerBehavior x:Name="PhysHelperWorld" MousePickEnabled="True"/>
+    	</i:Interaction.Behaviors>
+    	<Rectangle x:Name="Ground" Fill="#FF03562E" Height="25" Stroke="Black" Canvas.Top="775" Width="480">
+    		<i:Interaction.Behaviors>
+    			<pb:PhysicsObjectBehavior IsStatic="True" BoundaryElement="Ground"/>
+    		</i:Interaction.Behaviors>
+    	</Rectangle>
+    	<Rectangle x:Name="RightWall" Fill="#FF03562E" Height="800" Canvas.Left="484" Stroke="Black" Width="25">
+    		<i:Interaction.Behaviors>
+    			<pb:PhysicsObjectBehavior IsStatic="True" BoundaryElement="RightWall"/>
+    		</i:Interaction.Behaviors>
+    	</Rectangle>
+    	<Rectangle x:Name="LeftWall" Fill="#FF03562E" Height="800" Canvas.Left="-29" Stroke="Black" Width="25">
+    		<i:Interaction.Behaviors>
+    			<pb:PhysicsObjectBehavior IsStatic="True"/>
+    		</i:Interaction.Behaviors>
+    	</Rectangle>
+    	<Rectangle x:Name="Ceiling" Fill="#FF03562E" Height="25" Stroke="Black" Canvas.Top="-29" Width="480">
+    		<i:Interaction.Behaviors>
+    			<pb:PhysicsObjectBehavior IsStatic="True" BoundaryElement="Ceiling"/>
+    		</i:Interaction.Behaviors>
+    	</Rectangle>
+    	<Image x:Name="Player" Height="46" Width="100"  Stretch="Uniform"  Source="/Assets/Lizard.png">
+           
+            <i:Interaction.Behaviors>
+    			<pb:PhysicsObjectBehavior Mass="1" RestitutionCoefficient="0.1" MomentOfIntertia="1" IsBullet="True"/>
+    		</i:Interaction.Behaviors>
+    	</Image>
     </Canvas>
 
 </phone:PhoneApplicationPage>
