--- a/slHackathonGame/Pages/GamePage.xaml
+++ b/slHackathonGame/Pages/GamePage.xaml
@@ -5,8 +5,8 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:pb="clr-namespace:Spritehand.PhysicsBehaviors;assembly=Spritehand.PhysicsBehaviors" 
-    x:Class="slHackathonGame.Pages.GamePage"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:pb="clr-namespace:Spritehand.PhysicsBehaviors;assembly=Spritehand.PhysicsBehaviors"
+    xmlns:UserControls="clr-namespace:slHackathonGame.UserControls" x:Class="slHackathonGame.Pages.GamePage"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -15,7 +15,7 @@
     shell:SystemTray.IsVisible="false">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Canvas x:Name="LayoutRoot" Background="CornflowerBlue">
+    <Canvas x:Name="LayoutRoot" Background="CornflowerBlue" >
         <!-- clip canvas at 480x800-->
         <Canvas.Clip>
             <RectangleGeometry Rect="0,0,480,800"/>
@@ -46,9 +46,12 @@
     	<Image x:Name="player" Height="46" Width="100"  Stretch="Uniform"  Source="/Assets/Lizard.png" Canvas.Left="63" Canvas.Top="117">
            
             <i:Interaction.Behaviors>
-            	<pb:PhysicsObjectBehavior Mass="1" RestitutionCoefficient="0.1" MomentOfIntertia="10" IsBullet="True" BoundaryElement="player"/>
+            	<pb:PhysicsObjectBehavior Mass="1" RestitutionCoefficient="0.1" MomentOfIntertia="20" IsBullet="True" BoundaryElement="player"/>
     		</i:Interaction.Behaviors>
     	</Image>
+        
+        <UserControls:TestUserControl Height="25" Width="200" Canvas.Left="280" Canvas.Top="260" />
+        
         <Rectangle x:Name="branch" Fill="#FF745B18" Stroke="Black" Width="200" Height="25" Canvas.Left="280" Canvas.Top="382">
             <i:Interaction.Behaviors>
                 <pb:PhysicsObjectBehavior IsStatic="True" Mass="1" ForceRectangle="True" BoundaryElement="branch"/>
